# total-energies-of-mg-polytypes

./: READ-contents-of-repository  README.md
input-files/dft/fermi-function-smearing/15r/: ctrl.mg
input-files/dft/fermi-function-smearing/3r/: ctrl.mg
input-files/dft/fermi-function-smearing/9r/: ctrl.mg
input-files/dft/tetrahedron-integration/2h/: ctrl.mg
input-files/gpt/15r/: CONTROL
input-files/gpt/3r/: CONTROL
input-files/gpt/supercell-2h/i1-sf/: CONTROL
input-files/gpt/supercell-2h/i2-sf/: CONTROL
input-files/gpt/supercell-2h/ideal-supercell/: CONTROL
paper-data/dft/fermi-function-smearing/10h/: ctrl.mg
paper-data/dft/fermi-function-smearing/2h/: ctrl.mg
paper-data/dft/fermi-function-smearing/4h/: ctrl.mg
paper-data/dft/fermi-function-smearing/6h/: ctrl.mg
paper-data/dft/lmto-code/: COPYING  CREDITS  MakeMainMakefile  README.md  bitbucket-pipelines.yml  configure  configure.py  genflags.py  gitref.h  lmv7.f  quickbuild-docker.sh  quickbuild.sh  testable.md
paper-data/dft/lmto-code/deltacodes_setup/: README.txt  clean.sh  dpt.py  fit.py  init.ag  init.al  init.ar  init.as  init.au  init.b  init.ba  init.be  init.bi  init.br  init.c  init.ca  init.cd  init.cl  init.co  init.cr  init.cs  init.cu  init.f  init.fe  init.ga  init.ge  init.h  init.he  init.hf  init.hg  init.i  init.in  init.ir  init.k  init.kr  init.li  init.lu  init.mg  init.mn  init.mo  (+38 more)
paper-data/dft/lmto-code/dmft/: ChangeLog  Makefile  addsigmatog.f  ausintegr.fortran  broad_sig.f90  chk_selfcons.f  chk_sigbar.f  cmp_denmat.f  cmp_overlap.f  cmp_overlap_inv.f  cmp_overlaptest.f  cmpvalcharg_matsub4.f  compressproj.f  compresssigma_kristjan.fortran  diagdenmat.f  diagoham.f  dmftevec.f  dmftprojection.f  embed_sigma.f  getVnew.f  iodmftdc.f  iodmftu.f  iodsig.f  iosegw.f  lmfp.f  lmlproj.f  makebarechi.f  makedc.f  makedelta3.f  makeeimp2.f  makegloc2.f  makehbar2.f  makeproj.f  makesiggwloc.f  mkdmftstates.f  mksigpade.f  print_dmftu.f  print_gijk.f  print_gloc.f  print_sigf0.f  (+16 more)
paper-data/dft/lmto-code/doc/: ASAtutorial.html  Building_FP_input_file.html  ChangeLog  Changes.v7  CheckLog  Command-line-options.html  Demo_ASA_copt.html  Demo_QSGW_Si.html  External-Bfield.html  FPoptbas.html  FPtutorial.html  FStutorial.html  Getting_Started.html  Integer-list-syntax.html  MPI-instructions-for-lm  MPI-instructions-for-lmf  README  README.old  SpectralFunction.html  array-file-format.html  blcd.py  bzintegration.html  cpa.html  file-preprocessor.html  for-developers.txt  fp.html  generating-density-of-states.html  generating-energy-bands.html  gf.html  gw.html  input.tex  l-ordering.html  levenberg-marquardt.html  libxc-names.txt  linear-response-asa.html  lmto.html  map-sigma-to-u.html  nc.html  optics.html  positions.html  (+7 more)
paper-data/dft/lmto-code/fp/: ChangeLog  Makefile  Special-Flags  addbkg.f  addrbl.f  addrwf.f  atqval.f  atwf.f  augmat.f  augmbl.f  avsoef.f  bndfp.f  bstrux.f  chimedit.f  corprm.f  dfaugm.f  dfqkkl.f  dfratm.f  dfrce.f  diagcv.f  dpdbyl.f  dpdftr.f  efldos.f  elocp.f  ephed.f  evalqp.f  fklbl.f  flocbl.f  fpchk.f  fradhd.f  fradpk.f  fsmbl.f  fsmbpw.f  ftlxp.f  gaugm.f  gfigbl.f  ggugbl.f  ghibl.f  ghigbl.f  ghios.f  (+114 more)
paper-data/dft/lmto-code/gf/: ChangeLog  Makefile  README  Special-Flags  adrotp.f  advshp.f  asagqr.f  asajft.f  besslz.f  cpadlm.f  cpagamma.f  dfphiz.f  dglrft.f  dlmenrg.f  dlmentrp.f  dlmgrp2.f  dlminit.f  dlmmxy.f  dlmsumev.f  dlmtemp.f  dlmwgts.f  emesh.f  exasa.f  gcpa.f  getpfi.f  gf1kp.f  gfasa.f  gfasdc.f  gfbz2r.f  gfdmatu.f  gfdpp.f  gfefbz.f  gfenint.f  gffbz.f  gfg0g.f  gfg2g.f  gfg2gnc.f  gfg2gr.f  gfgii.f  gfgw.f  (+82 more)
paper-data/dft/lmto-code/gw/: Makefile  gwinputprodbas.f  gworthphi.f  iopbme.f  makecgr.f  makegw.f  mtoindex.f  prodbas.f  prodbaschk.f  prodbasme.f  prodphi.f  rprodbas.f  rprodbasi.f  vcoulq.f
paper-data/dft/lmto-code/gwd/: ChangeLog  Makefile  Special-Flags  bndconn_v2.f  chimedit.f  chkgwin.f  genqbz.f  gwband2std.fortran  gwcphi.f  gwdimpar.f  lmf2gw.fortran  lmf2gw.fpgw033a4  lmf2gw.fpgw033a5  lmf2gw_0.f  lmf2gw_2.f  mk_hamindex.f  polinta.f  pwmat.f  rdqgcou.f  read_bzdata.f  stonerpb.f  stonerrsa.f  sugw.f  sugw.fpgw033a4  sugwin.f  suq0x.f
paper-data/dft/lmto-code/misc/: .emacs  Make.inc.template.INTEL_IFORT  Make.inc.template.OSXI  Makefile.template  Makemakefile  Makepatchfile  Maksmakfile  aclocal.m4  catbnd.f  ccomp-files  cmpdist  cmplmf  command-line-switches  config.sub  configure.in  cp2dist  cpnone  ctrl67.el  f2c.LINUXI.h  flags-example.py  fortran-call-tree.el  fortran-list-subroutine-args.el  fortran.el  ftnemacs.el  getbmodv  getsv  in.mpi.saguaro  infgw  init.bzt  list-comment-lines.el  lmf-phonopy  lmf2gw.f  machine-mnemonic  make-syml.rhomb  makedist  makedist.special  makestoner  makeupdate  map-results-irr-to-fbz.f  mkcln  (+24 more)
paper-data/dft/lmto-code/mol/: ChangeLog  Makefile  Special-Flags  amsbb1.f  amstrg.f  amstrp.f  astrg0.f  astrgc.f  astrgj.f  astrgl.f  astrx0.f  astrxj.f  augskj.f  bisinl.f  bonds.f  chlr2f.f  chlr2s.f  cirint.f  cstrx0.f  cstrxq.f  debprt.f  diagrr.f  distab.f  djohn.f  dlmtor.f  dpdist.f  dpmucp.f  (+333 more)
paper-data/dft/lmto-code/plot/etc/: Makemakefile  config.guess  configure.in  machine-mnemonic
paper-data/dft/lmto-code/slatsm/startup/: #Makemakefile#  ChangeLog  Changes.39  CheckLog  MPI-instructions  MakeArchiveMakefile  Makemakefile  Makemakefile.old  Maksmakfile  Maksmakfile.old  OPENMP-instructions  README  README.linux  aclocal.m4  aclocal.m4.sun  c3fft.f  ccomp-dist  ccomp-files  ccomp.c  cmpdist  configure.2.53  configure.in  echo_stderr  essl.lst  f2c.LINUXA.h  fortran.el  locase.c  machine-mnemonic  makedist  notesio  slatsm-remove-lblas  slatsm-to-aix90  slatsm-to-mpi  symvec.c  to-do  upcase.c
paper-data/gpt/2h/: CONTROL
paper-data/gpt/4h/: CONTROL
paper-data/gpt/6h/: CONTROL
paper-data/gpt/9r/: CONTROL
paper-data/gpt/gpt-binary/: Makefile  main.f90  vpairph.ca-ca.ca-mg.tm3.0.ol3  vpairph.ca-ca.ca-mg.tm3.0.ol3.delp  vpairph.mg-ca.ca-mg.tm3.0.ol3  vpairph.mg-ca.ca-mg.tm3.0.ol3.delp  vpairph.mg-mg.ca-mg.tm3.0.ol3  vpairph.mg-mg.ca-mg.tm3.0.ol3.delp
(+3256 files in other folders)
